syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

import "yandex/cloud/priv/datatransfer/v1/endpoint/common.proto";

enum YtCleanupPolicy {
    YT_CLEANUP_POLICY_UNSPECIFIED = 0;
    YT_CLEANUP_POLICY_DISABLED = 1;
    YT_CLEANUP_POLICY_DROP = 2;
}
message YtTarget {
    // YT Cluster (hahn, arnold, freud etc)
    string cluster = 1;
    // Path in YT where to store data, if not exist will create.
    // It require to had read, write and mount permission to a @robot-lf-dyn-push
    // granted
    string table_path = 2;
    // Should store or not all raw changes in a separate table (__wal table)
    bool push_wal = 3;
    // Should store or not deletes in replicated table in a separate archive tables
    bool archive_table = 4;
    // Tablet cell bundle for quota accounting
    string bundle = 5;
    // TTL in milliseconds, if presented will delete old records
    int64 ttl = 6;
    // One of scan or lookup
    string optimized_for = 7;
    // Allow to alter table automatically when schema change
    bool alterable = 8;
    // Only for time series data, will add shard column based on timestamp
    int64 time_shard_count = 9;
    // Only for time series data, list of fields to extract keys
    repeated string index = 10;
    // Only for time series data, will hash first column
    string hash_col = 11;
    // Where to store data (YT Medium), one of ssd or default
    string primary_medium = 12;
    // Only for time series data, will store table as ordered rather then sorted
    bool ordered = 13;
    // Only for time series data, How to rotate tables, if rotate presented will store
    // time based tables
    Rotator rotation = 14;
    // Only for ordered tables, how many tablet init by default
    // DEPRECATED, will be removed in March
    int64 tablet_count = 15;
    // Will create static table uploader, may be used only for snapshot copy
    bool static_table = 16;
    // Alternative table names in target
    repeated AltName alt_names = 17;
    // Will enable version tablet writer
    // Lookup in same TX on exist rows with same PKey in YT and skip rows which
    // version_column lower than actual stored
    // Versioned tablet writer do not support deletes
    string version_column = 18;
    // will affect how to write data in dyn tables (atomicity = full)
    bool strict = 19;
    // yt spec for table writer in json format
    string spec = 20;
    YtCleanupPolicy cleanup_policy = 21;
    // Only for ordered tables, how many tablet init by default
    int64 initial_tablet_count = 22;
    // hidden option to allow auto reupload for banned tables
    bool allow_reupload = 23;
    // hidden option which disable yt ban tables mechanism
    bool no_ban = 24;
    // hidden option which skip primary keys updates and lead to data duplication
    // see errors: Primary key change event detected. These events are not yet
    // supported, sink may contain extra rows
    bool tolerate_key_changes = 25;
    bool use_static_table_on_snapshot = 26;
    int64 chunk_size = 27;
}
message YtSource {
    string cluster = 1;
    repeated string paths = 2;
    Secret token = 3;
    string row_index_column_name = 5;
}
message YtCopyResourceLimits {
    int64 user_slots = 1;
}
message YtCopyTarget {
    string cluster = 1;
    string path = 2;
    Secret token = 3;
    int64 parallelism = 4;
    bool use_push_transaction = 5;
    string pool = 6;
    YtCopyResourceLimits resource_limits = 7;
}
